SET(CMAKE_INCLUDE_CURRENT_DIR ON) 

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

STRING( REGEX REPLACE ".*/(.*)" "\\1" CURRENT_FOLDER ${CMAKE_CURRENT_SOURCE_DIR} )

FIND_PACKAGE(VTK REQUIRED)

if (VTK_VERSION VERSION_LESS "9.0.0")
   INCLUDE(${VTK_USE_FILE})
endif()

ADD_EXECUTABLE(${CURRENT_FOLDER} main.cpp)

TARGET_LINK_LIBRARIES(${CURRENT_FOLDER}
${VTK_LIBRARIES}
)

if (VTK_VERSION VERSION_GREATER "9.0.0")
vtk_module_autoinit(
  TARGETS ${CURRENT_FOLDER}
  MODULES ${VTK_LIBRARIES}
)
endif()

